bynkc/tests/fixtures/negative/127_is_refined_base_mismatch/src/demo.bynk
commons demo

type Quantity = Int where InRange(1, 100)

fn f(s: String) -> Bool {
  s is Quantity
}
